--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>HeY,</h1>
     <p>This is a new Repo.</p>
-    <p>This is a new feature.</p>
+    <p>This is a new feature(button)</p>
 </body>
 </html>
